--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
   </head>
   <body>
     <header>
-      <a href="webstudio">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+11000111-11-11">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -30,31 +33,31 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2></h2>
+        <h2>...</h2>
         <ul>
           <li>
-            <h4>Strategy</h4>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h4>Punctuality</h4>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h4>Diligence</h4>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h4>Technologies</h4>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -63,7 +66,7 @@
         </ul>
       </section>
       <section>
-        <h3>What are we doing</h3>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
@@ -92,7 +95,7 @@
         </ul>
       </section>
       <section>
-        <h3>Our Team</h3>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
@@ -101,7 +104,7 @@
               height="260"
               alt="Smiling man with a beard"
             />
-            <h4>Mark Guerrero</h4>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -111,7 +114,7 @@
               height="260"
               alt="Smiling young man"
             />
-            <h4>Tom Ford</h4>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
@@ -122,7 +125,7 @@
               height="260"
               alt="Young woman with dark long hair"
             />
-            <h4>Camila Garcia</h4>
+            <h>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -132,7 +135,7 @@
               height="260"
               alt="Young man with dark short hair"
             />
-            <h4>Daniel Wilson</h4>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -140,7 +143,7 @@
     </main>
 
     <footer>
-      <a href="webstudio">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
