--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11000111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -33,7 +33,6 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>...</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -125,7 +124,7 @@
               height="260"
               alt="Young woman with dark long hair"
             />
-            <h>Camila Garcia</h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
